--- a/book.html
+++ b/book.html
@@ -56,7 +56,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
       <a class="navbar-brand" href="index.html">
-        <img class="navimg" src="images/logo.png" alt="logo">
+        <img class="navimg" src="images/LOGO_new.png" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
             <a class="nav-link navitm" href="index.html#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navitm" href="blog.html">Blog</a>
+            <a class="nav-link navitm disabled" href="blog.html">Blog</a>
           </li>
         </ul>
         <form action="book.html" class="form-inline mt-2 mt-md-0">
