--- a/book.html
+++ b/book.html
@@ -79,7 +79,7 @@
             <a class="nav-link navitm" href="index.html#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link navitm disabled" href="blog.html">Blog</a>
+            <a class="nav-link disabled" href="#">Blog</a>
           </li>
         </ul>
         <form action="book.html" class="form-inline mt-2 mt-md-0">
